--- a/Deep_Learning.ipynb
+++ b/Deep_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYIyFG5hlm/TeyLyi5Dt9m",
+      "authorship_tag": "ABX9TyPTgIm87fCDoF0HHVrCBgVy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,22 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/brncnclk/deeplearning/blob/main/Deep_Learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<a id=\"toc\">\n",
+        "\n",
+        "## <font color=\"#16caca\"> __Table of Contents__ </font>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "</a>\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nMcPbTRTC5dk"
+      }
     },
     {
       "cell_type": "code",
