--- a/Deep_Learning.ipynb
+++ b/Deep_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTgIm87fCDoF0HHVrCBgVy",
+      "authorship_tag": "ABX9TyPAWLWlGzTKmXQP7lJqalHT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +44,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "V5Nts1Av-sCJ"
+        "id": "V5Nts1Av-sCJ",
+        "outputId": "77ee113d-b558-4989-92b9-12af1b25146c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hello\")"
+      ]
     }
   ]
 }
